arbolParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\ama\source\repos\EjemploGramatica\arbol.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class arbolParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, TEXTO=6, ESPACIOS=7;
	public const int
		RULE_arbol = 0, RULE_hijos = 1, RULE_familia = 2, RULE_matrimonio = 3, 
		RULE_persona = 4;
	public static readonly string[] ruleNames = {
		"arbol", "hijos", "familia", "matrimonio", "persona"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "','", "'}'", "'+'", "'#'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, "TEXTO", "ESPACIOS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "arbol.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static arbolParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public arbolParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public arbolParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ArbolContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public HijosContext hijos() {
			return GetRuleContext<HijosContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(arbolParser.Eof, 0); }
		public ArbolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arbol; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IarbolVisitor<TResult> typedVisitor = visitor as IarbolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArbol(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArbolContext arbol() {
		ArbolContext _localctx = new ArbolContext(Context, State);
		EnterRule(_localctx, 0, RULE_arbol);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 10;
			hijos();
			State = 11;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HijosContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FamiliaContext[] familia() {
			return GetRuleContexts<FamiliaContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FamiliaContext familia(int i) {
			return GetRuleContext<FamiliaContext>(i);
		}
		public HijosContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_hijos; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IarbolVisitor<TResult> typedVisitor = visitor as IarbolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHijos(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HijosContext hijos() {
		HijosContext _localctx = new HijosContext(Context, State);
		EnterRule(_localctx, 2, RULE_hijos);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 13;
			Match(T__0);
			State = 14;
			familia();
			State = 19;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__1) {
				{
				{
				State = 15;
				Match(T__1);
				State = 16;
				familia();
				}
				}
				State = 21;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 22;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FamiliaContext : ParserRuleContext {
		public FamiliaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_familia; } }
	 
		public FamiliaContext() { }
		public virtual void CopyFrom(FamiliaContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ParejaContext : FamiliaContext {
		[System.Diagnostics.DebuggerNonUserCode] public MatrimonioContext matrimonio() {
			return GetRuleContext<MatrimonioContext>(0);
		}
		public ParejaContext(FamiliaContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IarbolVisitor<TResult> typedVisitor = visitor as IarbolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPareja(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class JamonContext : FamiliaContext {
		[System.Diagnostics.DebuggerNonUserCode] public PersonaContext persona() {
			return GetRuleContext<PersonaContext>(0);
		}
		public JamonContext(FamiliaContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IarbolVisitor<TResult> typedVisitor = visitor as IarbolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitJamon(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FamiliaContext familia() {
		FamiliaContext _localctx = new FamiliaContext(Context, State);
		EnterRule(_localctx, 4, RULE_familia);
		try {
			State = 26;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				_localctx = new JamonContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 24;
				persona();
				}
				break;
			case 2:
				_localctx = new ParejaContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 25;
				matrimonio();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MatrimonioContext : ParserRuleContext {
		public MatrimonioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_matrimonio; } }
	 
		public MatrimonioContext() { }
		public virtual void CopyFrom(MatrimonioContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class MatrimonioConHijosContext : MatrimonioContext {
		[System.Diagnostics.DebuggerNonUserCode] public PersonaContext[] persona() {
			return GetRuleContexts<PersonaContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PersonaContext persona(int i) {
			return GetRuleContext<PersonaContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HijosContext hijos() {
			return GetRuleContext<HijosContext>(0);
		}
		public MatrimonioConHijosContext(MatrimonioContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IarbolVisitor<TResult> typedVisitor = visitor as IarbolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMatrimonioConHijos(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MatrimonioSinHijosContext : MatrimonioContext {
		[System.Diagnostics.DebuggerNonUserCode] public PersonaContext[] persona() {
			return GetRuleContexts<PersonaContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PersonaContext persona(int i) {
			return GetRuleContext<PersonaContext>(i);
		}
		public MatrimonioSinHijosContext(MatrimonioContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IarbolVisitor<TResult> typedVisitor = visitor as IarbolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMatrimonioSinHijos(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MatrimonioContext matrimonio() {
		MatrimonioContext _localctx = new MatrimonioContext(Context, State);
		EnterRule(_localctx, 6, RULE_matrimonio);
		try {
			State = 37;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				_localctx = new MatrimonioSinHijosContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 28;
				persona();
				State = 29;
				Match(T__3);
				State = 30;
				persona();
				}
				break;
			case 2:
				_localctx = new MatrimonioConHijosContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 32;
				persona();
				State = 33;
				Match(T__3);
				State = 34;
				persona();
				State = 35;
				hijos();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PersonaContext : ParserRuleContext {
		public PersonaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_persona; } }
	 
		public PersonaContext() { }
		public virtual void CopyFrom(PersonaContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class VivoContext : PersonaContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXTO() { return GetToken(arbolParser.TEXTO, 0); }
		public VivoContext(PersonaContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IarbolVisitor<TResult> typedVisitor = visitor as IarbolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVivo(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FallecidoContext : PersonaContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXTO() { return GetToken(arbolParser.TEXTO, 0); }
		public FallecidoContext(PersonaContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IarbolVisitor<TResult> typedVisitor = visitor as IarbolVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFallecido(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PersonaContext persona() {
		PersonaContext _localctx = new PersonaContext(Context, State);
		EnterRule(_localctx, 8, RULE_persona);
		try {
			State = 42;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				_localctx = new VivoContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 39;
				Match(TEXTO);
				}
				break;
			case 2:
				_localctx = new FallecidoContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 40;
				Match(TEXTO);
				State = 41;
				Match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
